--- a/client/index.html
+++ b/client/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>React FTW!</title>
-  <link rel="stylesheet" href="styles/styles.css"
 </head>
-<body className="bg-gray-200">
+<body>
   <div id="app"></div>
 
-  <script src="/bundle.js"></script>
+  <script type="module" src="index.js"></script>
 </body>
 </html>
