--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>React FTW!</title>
-  <link rel="stylesheet" href="styles/styles.css"
+  <link rel="stylesheet" href="styles/styles.css"/>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body className="bg-gray-200">
   <div id="app"></div>
