--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,8 +5,7 @@
   <title>React FTW!</title>
   <link rel="stylesheet" href="styles/styles.css"/>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-</head>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400;1,700;1,800&display=swap" rel="stylesheet"></head>
 <body className="bg-gray-200">
   <div id="app"></div>
 
