--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,6 +6,12 @@
   <link rel="stylesheet" href="styles/styles.css"/>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,700;1,800&display=swap" rel="stylesheet"><body className="bg-gray-200">
+<!-- LANGUAGE ICONS -->
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.10.1/devicon.min.css"> -->
+  <link rel="stylesheet" href="devicon.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.10.1/devicon.min.css">
+
+
   <div id="app"></div>
 
   <script src="/bundle.js"></script>
