all buttons styled and hovered correctly

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -9,7 +9,7 @@
 <!-- LANGUAGE ICONS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
 <body >
-  <div id="app" class="m-30"></div>
+  <div id="app" class="p-3"></div>
 
   <script src="/bundle.js"></script>
 </body>
